Support for freeing direct bytebuffers in Java 9+.