@@ -64,17 +64,32 @@
 
     <!-- Maven plugins -->
     <maven.source.plugin.version>2.2.1</maven.source.plugin.version>
-    <maven.compiler.plugin.version>3.0</maven.compiler.plugin.version>
+    <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
     <maven.failsafe.plugin.version>2.21.0</maven.failsafe.plugin.version>
     <maven.surefire.plugin.version>2.21.0</maven.surefire.plugin.version>
     <maven.clean.plugin.version>2.5</maven.clean.plugin.version>
     <maven.resources.plugin.version>2.6</maven.resources.plugin.version>
     <maven.dependency.plugin.version>2.7</maven.dependency.plugin.version>
     <maven.assembly.plugin.version>2.4</maven.assembly.plugin.version>
-    <maven.javadoc.plugin.version>2.10.1</maven.javadoc.plugin.version>
+    <maven.javadoc.plugin.version>3.0.0-M1</maven.javadoc.plugin.version>
     <maven.bundle.plugin.version>2.5.3</maven.bundle.plugin.version>
     <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
+
+    <argLine.java9 /> <!-- Overridden when 'java9' profile is active -->
   </properties>
+
+  <profiles>
+    <!-- JDK9+ -->
+    <profile>
+      <id>java9</id>
+      <properties>
+        <argLine.java9>--add-modules jdk.unsupported --add-opens=java.base/java.nio=ALL-UNNAMED</argLine.java9>
+      </properties>
+      <activation>
+        <jdk>9</jdk>
+      </activation>
+    </profile>
+  </profiles>
 
   <licenses>
     <license>
@@ -184,7 +199,7 @@
         <version>${maven.surefire.plugin.version}</version>
         <configuration>
           <shutdown>kill</shutdown>
-          <argLine>${argLine} -Xss256k -Xms2G -Xmx4G -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -Dio.atomix.scanSpec=io.atomix</argLine>
+          <argLine>${argLine} ${argLine.java9} -Xss256k -Xms2G -Xmx4G -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -Dio.atomix.scanSpec=io.atomix</argLine>
         </configuration>
       </plugin>
 
